Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-109613

duplicate symbols in gstreamer and ffmpeg backends

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.4.3, 6.5.0, 6.6.0
    • 6.5
    • Multimedia
    • None
    • 24eb3e2a8 (dev), 0d92f0683 (6.4), fd8d3c080 (6.5)

    Description

      If QtMultimedia has both gstreamer and ffmpeg backends enabled and it's built statically, application linking against it will fail for duplicate symbols:

      agent:2022/12/23 06:10:59 build.go:399: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot-native/usr/bin/aarch64-poky-linux/../../libexec/aarch64-poky-linux/gcc/aarch64-poky-linux/12.2.0/ld.gold: error: /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot/usr/lib/plugins/multimedia/libgstreamermediaplugin.a(qgstreamerimagecapture.cpp.o): multiple definition of 'qLcImageCapture()'
      agent:2022/12/23 06:10:59 build.go:399: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot-native/usr/bin/aarch64-poky-linux/../../libexec/aarch64-poky-linux/gcc/aarch64-poky-linux/12.2.0/ld.gold: /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot/usr/lib/plugins/multimedia/libffmpegmediaplugin.a(qffmpegimagecapture.cpp.o): previous definition here
      agent:2022/12/23 06:10:59 build.go:399: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot-native/usr/bin/aarch64-poky-linux/../../libexec/aarch64-poky-linux/gcc/aarch64-poky-linux/12.2.0/ld.gold: error: /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot/usr/lib/plugins/multimedia/libgstreamermediaplugin.a(qgstreamermediacapture.cpp.o): multiple definition of 'qLcMediaCapture()'
      agent:2022/12/23 06:10:59 build.go:399: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot-native/usr/bin/aarch64-poky-linux/../../libexec/aarch64-poky-linux/gcc/aarch64-poky-linux/12.2.0/ld.gold: /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot/usr/lib/plugins/multimedia/libffmpegmediaplugin.a(qffmpegmediacapturesession.cpp.o): previous definition here
      agent:2022/12/23 06:10:59 build.go:399: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot-native/usr/bin/aarch64-poky-linux/../../libexec/aarch64-poky-linux/gcc/aarch64-poky-linux/12.2.0/ld.gold: error: /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot/usr/lib/plugins/multimedia/libgstreamermediaplugin.a(qgstreamermediaencoder.cpp.o): multiple definition of 'qLcMediaEncoder()'
      agent:2022/12/23 06:10:59 build.go:399: | /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot-native/usr/bin/aarch64-poky-linux/../../libexec/aarch64-poky-linux/gcc/aarch64-poky-linux/12.2.0/ld.gold: /home/qt/work/build/build/tmp/work/cortexa57-poky-linux/qtinterfaceframework/6.6.0-r0/recipe-sysroot/usr/lib/plugins/multimedia/libffmpegmediaplugin.a(qffmpegmediarecorder.cpp.o): previous definition here
      agent:2022/12/23 06:10:59 build.go:399: | collect2: error: ld returned 1 exit status 

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            laknoll Lars Knoll
            sapiippo Samuli Piippo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes