Don't define same logging category in both plugins

Both ffmpeg and gstreamer plugins define the same logging category,
which breaks application linking when using static linking:

error: /usr/lib/plugins/multimedia/libgstreamermediaplugin.a(qgstreamerimagecapture.cpp.o): multiple definition of 'qLcImageCapture()'
/usr/lib/plugins/multimedia/libffmpegmediaplugin.a(qffmpegimagecapture.cpp.o): previous definition here

Fixes: QTBUG-109613
Change-Id: I9dd573fe8412ec0ea9144ec4a56f5680060cec16
Reviewed-by: Lars Knoll <lars@knoll.priv.no>
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit 24eb3e2a8859eeff73c4954ff2a3d366a7ab0511)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>